--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=postgresql://app:app@db:5432/app?schema=public
 NEXTAUTH_SECRET=dev-secret-change
 NEXTAUTH_URL=http://localhost:3000
+NEXT_PUBLIC_DEFAULT_SHIFT_HOURS=6
